k8s/apps/storage/longhorn/ingressroute.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: storage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.k8s.sbbh.cloud`)
      services:
        - name: longhorn-frontend
          port: 80
